--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 quarkus.web-bundler.dependencies.auto-import=all
 quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment.scan".level=DEBUG
 quarkus.default-locale=en
+quarkus.qute.asciidoctorj.icons=font
+quarkus.qute.asciidoctorj.source-highlighter=highlight.js
