--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
-            <artifactId>quarkus-roq-plugin-asciidoc</artifactId>
+            <artifactId>quarkus-roq-plugin-asciidoctorj</artifactId>
             <version>${quarkus-roq.version}</version>
         </dependency>
         <dependency>
@@ -102,6 +102,14 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-config-doc-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <targetDirectory>${project.basedir}/templates/doc</targetDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>${quarkus.platform.version}</version>
@@ -133,6 +141,7 @@
                             <destinationFile>data/contributors.json</destinationFile>
                         </configuration>
                     </execution>
+
                 </executions>
             </plugin>
             <plugin>
