Introduce plugin-asciidoc-jruby and more

--- a/plugin/aliases/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/plugin/aliases/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,4 +1,4 @@
-name: Roq Plugin Aliases
+name: Roq Plugin - Aliases
 description: This plugin allows creating one or many aliases (redirections) for a page.
 metadata:
   keywords:
