--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.quarkiverse.roq</groupId>
     <artifactId>roq-blog</artifactId>
@@ -51,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
-            <artifactId>quarkus-roq-plugin-asciidoctorj</artifactId>
+            <artifactId>quarkus-roq-plugin-asciidoc-jruby</artifactId>
             <version>${quarkus-roq.version}</version>
         </dependency>
         <dependency>
@@ -100,13 +101,14 @@
         </dependency>
     </dependencies>
     <build>
+
         <plugins>
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
-                    <targetDirectory>${project.basedir}/templates/doc</targetDirectory>
+                    <targetDirectory>${project.basedir}/templates/partials/doc/configs</targetDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -131,16 +133,27 @@
                 <version>1.0.1</version>
                 <executions>
                     <execution>
-                        <id>copy-contributors</id>
+                        <id>copy-data</id>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>copy</goal>
                         </goals>
                         <configuration>
-                            <sourceFile>${project.basedir}/../.all-contributorsrc</sourceFile>
-                            <destinationFile>data/contributors.json</destinationFile>
+                            <fileSets>
+                                <fileSet>
+                                    <sourceFile>${project.basedir}/../.all-contributorsrc</sourceFile>
+                                    <destinationFile>data/contributors.json</destinationFile>
+                                </fileSet>
+                                <fileSet>
+                                    <sourceFile>${project.basedir}/../.github/project.yml</sourceFile>
+                                    <destinationFile>data/project-info.yml</destinationFile>
+                                </fileSet>
+                            </fileSets>
+
                         </configuration>
                     </execution>
+
+
 
                 </executions>
             </plugin>
@@ -174,7 +187,8 @@
                 </executions>
                 <configuration>
                     <systemPropertyVariables>
-                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner
+                        </native.image.path>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
                     </systemPropertyVariables>
