Plugin asciidoc jruby (#329)

--- a/blog/data/menu.yml
+++ b/blog/data/menu.yml
@@ -1,4 +1,19 @@
 items:
+  - title: "Getting Started"
+    path: "/docs/getting-started"
+    icon: "fa fa-bolt"
+  - title: "Roq the Basics"
+    path: "/docs/basics"
+    icon: "fa fa-guitar"
+  - title: "Publishing"
+    path: "/docs/publishing"
+    icon: "fa fa-rocket"
+  - title: "Plugins"
+    path: "/docs/plugins"
+    icon: "fa-solid fa-hill-rockslide"
+  - title: "Advanced stuff"
+    path: "/docs/advanced"
+    icon: "fa-solid fa-truck-monster"
   - title: "Blog"
     path: "/"
     icon: "fa-regular fa-newspaper"
@@ -8,7 +23,4 @@ items:
   - title: "About"
     path: "/about"
     icon: "fa fa-thumbs-up"
-  - title: "Documentation"
-    path: "https://docs.quarkiverse.io/quarkus-roq/dev/index.html"
-    icon: "fa-solid fa-book"
-    target: "_blank"
+
