--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -3,3 +3,5 @@
 quarkus.web-bundler.dependencies.auto-import=all
 quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment.scan".level=DEBUG
 quarkus.default-locale=en
+quarkus.asciidoctorj.attributes.icons=font
+quarkus.asciidoctorj.attributes.source-highlighter=highlight.js
