--- a/plugin/asciidoc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/plugin/asciidoc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
-name: Roq Plugin Asciidoc
-description: This plugin allows to use Asciidoc in ROQ
+name: Roq Plugin - Asciidoc Java
+description: This plugin enables Asciidoc support in Roq with a fast startup time and full compatibility with native builds. However, it has limited features and does not support Asciidoc extensions (such as diagram).
 metadata:
   keywords:
     - website
@@ -15,6 +15,7 @@ metadata:
     - ssg
     - asciidoc
     - plugin
+    - asciidoctor
   guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-asciidoc
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
