--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <quarkus.version>3.17.5</quarkus.version>
         <assertj.version>3.27.0</assertj.version>
         <quarkus-qute-web.version>3.2.2</quarkus-qute-web.version>
+        <asciidoctorj.version>3.0.0</asciidoctorj.version>
+        <asciidoctorj-diagram.version>2.3.1</asciidoctorj-diagram.version>
         <quarkus-web-bundler.version>1.8.0</quarkus-web-bundler.version>
     </properties>
 
