--- a/blog/data/menu.yml
+++ b/blog/data/menu.yml
@@ -1,26 +1,26 @@
 items:
   - title: "Getting Started"
-    path: "/docs/getting-started"
+    path: "/docs/getting-started/"
     icon: "fa fa-bolt"
   - title: "Roq the Basics"
-    path: "/docs/basics"
+    path: "/docs/basics/"
     icon: "fa fa-guitar"
   - title: "Publishing"
-    path: "/docs/publishing"
+    path: "/docs/publishing/"
     icon: "fa fa-rocket"
   - title: "Plugins"
-    path: "/docs/plugins"
+    path: "/docs/plugins/"
     icon: "fa-solid fa-hill-rockslide"
   - title: "Advanced stuff"
-    path: "/docs/advanced"
+    path: "/docs/advanced/"
     icon: "fa-solid fa-truck-monster"
   - title: "Blog"
     path: "/"
     icon: "fa-regular fa-newspaper"
   - title: "Events"
-    path: "/events"
+    path: "/events/"
     icon: "fa fa-calendar"
   - title: "About"
-    path: "/about"
+    path: "/about/"
     icon: "fa fa-thumbs-up"
 
