--- a/plugin/sitemap/pom.xml
+++ b/plugin/sitemap/pom.xml
@@ -4,22 +4,18 @@
 
     <parent>
         <groupId>io.quarkiverse.roq</groupId>
-        <artifactId>quarkus-roq-project-parent</artifactId>
+        <artifactId>quarkus-roq-plugin-parent</artifactId>
         <version>999-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>quarkus-roq-plugin-parent</artifactId>
+    <artifactId>quarkus-roq-plugin-sitemap-parent</artifactId>
     <packaging>pom</packaging>
-    <name>Quarkus Roq - Plugins</name>
-
+    <name>Quarkus Roq - Plugin - Sitemap</name>
+    <properties>
+        <jgit.version>7.1.0.202411261347-r</jgit.version>
+    </properties>
     <modules>
-        <module>tagging</module>
-        <module>aliases</module>
-        <module>markdown</module>
-        <module>asciidoc</module>
-        <module>asciidoc-jruby</module>
-        <module>qrcode</module>
-        <module>series</module>
-        <module>sitemap</module>
+        <module>deployment</module>
+        <module>runtime</module>
     </modules>
 </project>
