Rename `roq-docs` back to `docs`
Otherwise build fails in https://github.com/quarkiverse/quarkiverse-docs

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 </property>
             </activation>
             <modules>
-                <module>roq-docs</module>
+                <module>docs</module>
             </modules>
         </profile>
         <profile>
