Improve doc edition and testing

--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -6,3 +6,4 @@ quarkus.web-bundler.dependencies.auto-import=all
 quarkus.default-locale=en
 quarkus.asciidoctorj.attributes.icons=font
 quarkus.asciidoctorj.attributes.source-highlighter=highlight.js
+site.slugify-files=false
