--- a/roq-generator/integration-tests/src/main/resources/application.properties
+++ b/roq-generator/integration-tests/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.roq.generator.paths=/,/static/**,/assets/**,/some-page
+quarkus.roq.generator.paths=/,/static/**,/assets/**,/some-page,/roq/c'est de la poussière d'étoile/
 quarkus.roq.generator.custom-paths."/roq?name\=custom"=/foo.json
 quarkus.roq.generator.batch=true
 quarkus.log.category."io.quarkiverse.roq".level=DEBUG
