--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -33,10 +33,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Those are not needed in most cases:
-          setup-java: 'false'
+          setup-java: 'false' # false if Set up Java is already done before this action
           site-directory: 'blog'  # needed if the site is located in a subdirectory
           maven-executable: 'mvn' # needed if you don't have ./mvnw in your repository
-          maven-build-args: '-DskipTests -Dquarkus.profile=gh-pages'
 
   # Deployment job
   deploy:
