--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -1,7 +1,5 @@
-%gh-pages.site.url=https://pages.quarkiverse.io/
-%gh-pages.quarkus.http.root-path=/quarkus-roq/
 quarkus.web-bundler.dependencies.auto-import=all
-#quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment".level=DEBUG
+quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment".level=DEBUG
 #quarkus.log.category."io.quarkiverse.roq.generator".level=DEBUG
 quarkus.default-locale=en
 quarkus.asciidoctorj.attributes.icons=font
