--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -51,6 +51,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-plugin-lunr</artifactId>
+            <version>${quarkus-roq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-plugin-aliases</artifactId>
             <version>${quarkus-roq.version}</version>
         </dependency>
@@ -87,6 +92,12 @@
             <groupId>org.mvnpm</groupId>
             <artifactId>highlight.js</artifactId>
             <version>11.11.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mvnpm</groupId>
+            <artifactId>lunr</artifactId>
+            <version>2.3.9</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
