--- a/roq/integration-tests/pom.xml
+++ b/roq/integration-tests/pom.xml
@@ -57,7 +57,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version> <!-- Adjust the version if needed -->
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
