Adds lunr plugin to provide search capabilities (#425)
* First tentative to index blog

* so many code copy/pasted from antora lunr...

* so many code copy/pasted from antora lunr...

* Use esbuild-plugin for search

* Fixes

* Fix pageContent

* adds doc

---------

Co-authored-by: Andy Damevin <ia3andy@gmail.com>

--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -51,6 +51,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-plugin-lunr</artifactId>
+            <version>${quarkus-roq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-plugin-aliases</artifactId>
             <version>${quarkus-roq.version}</version>
         </dependency>
@@ -84,6 +89,7 @@
             <version>11.11.1</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
