--- a/roq-plugin/sitemap/deployment/pom.xml
+++ b/roq-plugin/sitemap/deployment/pom.xml
@@ -22,9 +22,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
-            <version>${jgit.version}</version>
+            <groupId>io.quarkiverse.jgit</groupId>
+            <artifactId>quarkus-jgit-deployment</artifactId>
+            <version>${quarkus-jgit.version}</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
