--- a/roq-plugin/series/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-plugin/series/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -15,7 +15,7 @@ metadata:
     - roq
     - plugin
     - series
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-series
+  guide: https://iamroq.com/docs/plugins/#plugin-series
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
