--- a/roq-plugin/asciidoc-jruby/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-plugin/asciidoc-jruby/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -17,7 +17,7 @@ metadata:
     - asciidoc
     - asciidoctor
     - plugin
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-asciidoc
+  guide: https://iamroq.com/docs/plugins/#plugin-asciidoc
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
