--- a/roq-plugin/lunr/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-plugin/lunr/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -15,7 +15,7 @@ metadata:
     - ssg
     - lunr
     - plugin
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-lunr
+  guide: https://iamroq.com/docs/plugins/#plugin-lunr
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
