--- a/roq-plugin/tagging/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-plugin/tagging/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -16,7 +16,7 @@ metadata:
     - tagging
     - tag
     - plugin
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-tagging
+  guide: https://iamroq.com/docs/plugins/#plugin-tagging
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
