Allow custom favicon and rename file and image exists methods

--- a/roq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
 name: Roq
-description: Static Site Generator with Quarkus super-powers.
+description: Hello, world! I’m Roq — a fun little SSG (Static Site Generator) with a Java soul and Quarkus energy.
 metadata:
   keywords:
     - website
