Rename site.root-path to site.base-path and improve doc

--- a/roq-frontmatter/deployment/src/test/resources/application.properties
+++ b/roq-frontmatter/deployment/src/test/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.roq.resource-dir=site
 quarkus.http.root-path=/foo/
 
 site.url=https://mywebsite.com
-site.root-path=/bar/
+site.path-prefix=/bar/
 site.time-zone=UTC
 
 quarkus.log.category."io.quarkiverse.roq.frontmatter".level=DEBUG
