Show sites who uses ROQ #453

--- a/blog/data/menu.yml
+++ b/blog/data/menu.yml
@@ -8,6 +8,9 @@ nav:
   - title: "About"
     path: "/about/"
     icon: "fa fa-thumbs-up"
+  - title: "Roqers"
+    path: "/roqers/"
+    icon: "fa fa-guitar"
 doc:
   - title: "Getting Started"
     path: "/docs/getting-started/"
