Introduce Resume theme

--- a/roq-theme/resume/pom.xml
+++ b/roq-theme/resume/pom.xml
@@ -8,8 +8,9 @@
         <version>999-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <version>${project.version}.Beta</version>
     <artifactId>quarkus-roq-theme-resume</artifactId>
-    <name>Quarkus Roq - Theme - Resume</name>
+    <name>Quarkus Roq - Theme - Resume (</name>
 
     <dependencies>
         <dependency>
